--- a/templates/SignUp/validate/signUp.validate.result.html.twig
+++ b/templates/SignUp/validate/signUp.validate.result.html.twig
@@ -11,7 +11,7 @@
             <label for="code">Pour valider votre compte vous devez renseigner le code qui vous a été envoyé par mail.</label>
             <div>
                 <input type="text" name="code" id="code" required class="md:text-xl bg-400/20 w-11/12 md:w-5/6 h-8 mx-auto tracking-code text-center">
-                <p class="form_error">Code incorrect.</p>
+                <small class="form_error">Code incorrect.</small>
             </div>
             <button class="bg-secondary py-3 px-5 group hover:bg-400 duration-150 drop-shadow-lg w-fit text-primary hover:text-secondary mx-auto" type="submit">Valider</button>
         </form>
