bug : changing eye hide to see password

--- a/templates/Login/login.form.html.twig
+++ b/templates/Login/login.form.html.twig
@@ -34,8 +34,8 @@
                             <i class="fa-solid fa-lock"></i>
                             <input type="password" id="password" name="_password">
                             <span role="button" onclick="togglePassword(event)">
-                                <i class="fa-solid fa-eye w-[36px]" ></i>
-                                <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
+                                <i class="fa-solid fa-eye w-[36px] hide" ></i>
+                                <i class="fa-solid fa-eye-slash w-[36px]"></i>
                             </span>
                         </div>
                     </div>
