--- a/templates/SignUp/form/signUp.form.html.twig
+++ b/templates/SignUp/form/signUp.form.html.twig
@@ -44,8 +44,8 @@
                                 <i class="fa-solid fa-lock"></i>
                                 {{ form_widget(form.password) }}
                                 <span role="button" onclick="togglePassword(event)">
-                                    <i class="fa-solid fa-eye  w-[36px]" ></i>
-                                    <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
+                                    <i class="fa-solid fa-eye w-[36px] hide" ></i>
+                                    <i class="fa-solid fa-eye-slash w-[36px]"></i>
                                 </span>
                             </div>
                             <div>
@@ -58,8 +58,8 @@
                                 <i class="fa-solid fa-lock"></i>
                                 {{ form_widget(form.confirm) }}
                                 <span role="button" onclick="togglePassword(event)">
-                                    <i class="fa-solid fa-eye w-[36px]"></i>
-                                    <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
+                                    <i class="fa-solid fa-eye hide w-[36px]"></i>
+                                    <i class="fa-solid fa-eye-slash w-[36px]"></i>
                                 </span>                            
                             </div>
                             <div>
