--- a/templates/Admin/profil.html.twig
+++ b/templates/Admin/profil.html.twig
@@ -34,8 +34,8 @@
                                 <i class="fa-solid fa-lock"></i>
                                 <input type="password" min=8 max=80 name="password" id="password" placeholder="********" required pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$" onfocus="displayRules()" onfocusout="removeRules()" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
                                 <span role="button" onclick="togglePassword(event)">
-                                    <i class="fa-solid fa-eye w-[36px]" ></i>
-                                    <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
+                                    <i class="fa-solid fa-eye w-[36px] hide" ></i>
+                                    <i class="fa-solid fa-eye-slash w-[36px]"></i>
                                 </span>
                                 <button type="submit" id="change_password"><i class="fa-solid fa-pen"></i></button>
                                 <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_password"></small>
@@ -50,8 +50,8 @@
                                 <i class="fa-solid fa-lock"></i>
                                 <input type="password" min=8 max=80 name="valid_password" id="valid_password" placeholder="Nouveau mot de passe" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre." required>
                                 <span role="button" onclick="togglePassword(event)">
-                                    <i class="fa-solid fa-eye w-[36px]" ></i>
-                                    <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
+                                    <i class="fa-solid fa-eye w-[36px] hide" ></i>
+                                    <i class="fa-solid fa-eye-slash w-[36px]"></i>
                                 </span>
                                 <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_validPassword"></small>
                             </div>
@@ -60,8 +60,8 @@
                                 <i class="fa-solid fa-lock"></i>
                                 <input type="password" min=8 max=80 name="old_password" id="old_password" placeholder="Ancien mot de passe"pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$" required title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
                                 <span role="button" onclick="togglePassword(event)">
-                                    <i class="fa-solid fa-eye w-[36px]" ></i>
-                                    <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
+                                    <i class="fa-solid fa-eye w-[36px] hide" ></i>
+                                    <i class="fa-solid fa-eye-slash w-[36px]"></i>
                                 </span>
                                 <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_oldPassword"></small>
                             </div>
