--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -15,8 +15,8 @@
                     <i class="fa-solid fa-lock"></i>
                     {{ form_widget(resetForm.plainPassword.first) }}
                     <span role="button" onclick="togglePassword(event)">
-                        <i class="fa-solid fa-eye w-[36px]" ></i>
-                        <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
+                        <i class="fa-solid fa-eye w-[36px] hide" ></i>
+                        <i class="fa-solid fa-eye-slash w-[36px]"></i>
                     </span>
                 </div>
                 <small class="form_error">
@@ -29,8 +29,8 @@
                     <i class="fa-solid fa-lock"></i>
                     {{ form_widget(resetForm.plainPassword.second) }}
                     <span role="button" onclick="togglePassword(event)">
-                        <i class="fa-solid fa-eye  w-[36px]" ></i>
-                        <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
+                        <i class="fa-solid fa-eye w-[36px] hide" ></i>
+                        <i class="fa-solid fa-eye-slash w-[36px]"></i>
                     </span>
                 </div>
                 <small class="form_error">
