--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
                         <li><a href={{ path('contact') }}>Contact</a></li>
                         {% if app.user %}
                                 {% if 'ROLE_ADMIN' in app.user.roles %}
-                                    <li><a class="hover:underline hover:underline-offset-2" href="{{ path('admin_profil', {'page': 'carousel'}) }}">Profil</a></li>
+                                    <li><a class="hover:underline hover:underline-offset-2" href="{{ url('admin_profil', {'page_up':'informations', 'page_down' : 'carousel'}) }}">Profil</a></li>
                                 {% else %}
                                     <li><a class="hover:underline hover:underline-offset-2" href="">Profil</a></li>
                                 {% endif %}
