--- a/templates/Admin/profil_up/restaurant.html.twig
+++ b/templates/Admin/profil_up/restaurant.html.twig
@@ -40,7 +40,7 @@
                 <button type="submit" id="change_postcode"><i class="fa-solid fa-pen"></i></button>
             </div>
         </form>
-        <form method="post" class="form_profil">
+        <form method="post" class="form_profil items-center">
             <label for="places" class="hidden md:block">Couverts maximum :</label>
             <div class="form_inputContainer input_profil">
                 <i class="fa-solid fa-utensils"></i>
