--- a/templates/Admin/profil.html.twig
+++ b/templates/Admin/profil.html.twig
@@ -58,4 +58,7 @@
 	{% else %} 
 	<script src={{ asset('js/profil/'~'endleRequest.restaurant.js') }}></script>
 	{% endif %}
+	{% if page_down == 'carousel' %}
+	<script src={{ asset('js/profil/'~'handleRequest.carousel.js') }}></script>
+	{% endif %}
 {% endblock %}
