feat: adding the success message

--- a/templates/Admin/profil_down/carousel.html.twig
+++ b/templates/Admin/profil_down/carousel.html.twig
@@ -1,27 +1,43 @@
 <div class="text-secondary bg-600">
-    <div class="py-4 drop-shadow-lg">
-        <section class="after">
+    <div class="drop-shadow-lg">
+        <section class="after py-4">
             <p class="w-11/12 mx-auto max-w-[598px] pb-3">Ajouter une photo :</p>
-            {{ form_start(form_image, { 'attr' : { 'class' :'w-11/12 mx-auto max-w-[598px] lg:flex lg:justify-between'}})}}
-            <div class="pb-2 relative">
-                <div class="hidden">{{ form_label(form_image.image) }}</div>
-                {{ form_widget(form_image.image, { 'attr' : { 'class' : 'w-full pr-2' }}) }}
-                <small class="form_error absolute w-11/12 mx-auto -bottom-4 lg:-bottom-3 left-0">
-                    {{ form_errors(form_image.image) }}
-                </small>
+            {{ form_start(form_image, { 'attr' : { 'class' :'w-11/12 mx-auto max-w-[598px]'}})}}
+            <div class="lg:flex lg:justify-between">
+                <div class="pb-2 relative">
+                    <div class="hidden">{{ form_label(form_image.image) }}</div>
+                    {{ form_widget(form_image.image, { 'attr' : { 'class' : 'w-full pr-2' }}) }}
+                    <small class="form_error absolute w-11/12 mx-auto -bottom-4 lg:-bottom-3 left-0">
+                        {{ form_errors(form_image.image) }}
+                    </small>
+                </div>
+                <div class="flex gap-2 lg:w-1/2 relative">
+                    <div class="hidden">{{ form_label(form_image.title) }}</div>
+                    {{ form_widget(form_image.title, { 'attr' : { 'class' : 'input_carousel input_withoutIcon input_white'}} )}}
+                    <small class="form_error absolute w-11/12 mx-auto -bottom-4 lg:-bottom-3">
+                        {{ form_errors(form_image.title) }}
+                    </small>
+                    <button type="submit" id="add_image" class="input_carousel button_profil"><i class="fa-solid fa-plus"></i></button>
+                </div>
             </div>
-            <div class="flex gap-2 lg:w-1/2 relative">
-                <div class="hidden">{{ form_label(form_image.title) }}</div>
-                {{ form_widget(form_image.title, { 'attr' : { 'class' : 'input_carousel input_withoutIcon input_white'}} )}}
-                <small class="form_error absolute w-11/12 mx-auto -bottom-4 lg:-bottom-3">
-                    {{ form_errors(form_image.title) }}
+            <div class="relative pt-2">
+                <div class="hidden">{{ form_label(form_image.description) }}</div>
+                {{ form_widget(form_image.description, {'attr' : { 'class' : 'input_carousel input_withoutIcon input_white min-h-[80px]'}}) }}
+                <small class="form_error absolute w-11/12 mx-auto -bottom-4 lg:-bottom-3 left-0">
+                    {{ form_errors(form_image.description) }}
                 </small>
-                <button type="submit" id="add_image" class="input_carousel button_profil"><i class="fa-solid fa-plus"></i></button>
             </div>
             {{ form_end(form_image) }}
         </section>
         <section>
-        
+        {% for image in images_carousel %}
+            <picture>
+                <source srcset={{ asset(image.path ~"-extraLarge.jpg") }} media="(min-width : 1200px)">
+                <source srcset={{ asset(image.path ~"-large.jpg") }} media="(min-width : 990px)">
+                <source srcset={{ asset(image.path ~"-medium.jpg") }} media="(min-width : 768px)">
+                <img src={{ asset(image.path ~'-small.jpg')}} alt="{{ image.description }}">
+            </picture>
+        {% endfor %}
         </section>
     </div>
 </div>
